# platformer-game-sdl

./: AnimationComponent.h  AnimationManager.h  AnimationSystem.h  CMakeLists.txt  ColliderComponent.h  Collision.h  CollisionDetectionSystem.h  ECS.h  Gravity.h  PhysicsComponent.h  PhysicsSystem.h  PlayerMovementSystem.h  Princess.h  README.md  SpriteComponent.h  SpriteSystem.h  TransformComponent.h  game.cpp  game.h  main.cpp  texturemanager.cpp  texturemanager.h  vector2d.h
